fix footer z-index issue

--- a/css/modules/_zindex.scss
+++ b/css/modules/_zindex.scss
@@ -6,5 +6,6 @@ $zindex: (
   dropdown-body: 5500,
   dropdown-body-secondary: 5250, 
   footer    : 5000,
-  main      : 4000
+  main      : 4000,
+  main-secondary: 3000
 );
